--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,7 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
-}
+.nav-item > .active {
+    text-decoration-line: underline;
+    color: white;
+    background: #029292;
+    display: block;
+    border-radius: 4px;
+  }
