--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  max-height: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+ul {
+  padding: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
+html {
+  max-height: 100%;
+}
+
+.main {
+  position: absolute;
+  width: 100%;
+}
+
+/* media queries */
+@media (max-width: 768px) {
+  .main {
+    top: 60px;
+  }
 }
