--- a/src/components/Main/about.css
+++ b/src/components/Main/about.css
@@ -7,7 +7,7 @@
 }
 
 .profile {
-  max-width: 745px;
+  max-width: 800px;
   padding-bottom: 40px;
   margin-right: auto;
   margin-left: auto;
@@ -53,7 +53,7 @@
 
 .row p {
   color: #434242;
-  max-width: 300px;
+  max-width: 350px;
   font-size: large;
 }
 
@@ -68,5 +68,9 @@
 @media (max-width: 1090px) {
   .row {
     flex-direction: column;
+  }
+
+  .row p {
+    max-width: 300px;
   }
 }
