--- a/src/components/Main/projects.css
+++ b/src/components/Main/projects.css
@@ -25,6 +25,10 @@
     margin-right: 5px;
     margin-left: 5px;
     margin-bottom: 15px;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 10px;
+    border-color: #222;
     
 }
 
