--- a/src/components/Main/skills.css
+++ b/src/components/Main/skills.css
@@ -1,10 +1,9 @@
 .skills-container {
   font-family: "Raleway", sans-serif;
-  display:grid;
+  display: grid;
   max-width: 100%;
   background: #f3efe0;
   margin: 0 auto;
-
 }
 
 .skills-body {
@@ -14,9 +13,13 @@
   margin-left: auto;
 }
 
+.skills {
+  position: relative;
+}
+
 .ability {
   list-style: none;
-  padding-bottom: .3rem;
+  padding-bottom: 0.3rem;
 }
 
 .stars-span {
@@ -31,7 +34,6 @@
   float: right;
 }
 
-
 .solidStar {
   color: #029292;
 }
@@ -43,9 +45,10 @@
 .ability:hover {
   font-size: 1.12rem;
   background: #c7c2b0d0;
+  border-radius: 2px;
+  padding: 1px;
   text-decoration-line: underline;
 }
-
 
 /* media queries */
 @media (max-width: 1090px) {
@@ -54,6 +57,6 @@
   }
 
   .ability {
-    padding-bottom: .5rem;
+    padding-bottom: 0.5rem;
   }
 }
