--- a/src/components/Main/projects.css
+++ b/src/components/Main/projects.css
@@ -22,14 +22,16 @@
 .projects-row {
     display: flex;
     max-width: 800px;
+    object-fit: contain;
     margin:auto;
 
     align-items: center;
 }
 
 .project-link-pic {
-    max-width: 390px;
-    height: auto;
+    /* max-width: 390px; */
+    width: 390px;
+    height: 200px;
     margin-right: 5px;
     margin-left: 5px;
     margin-bottom: 15px;
