--- a/src/components/Main/skills.css
+++ b/src/components/Main/skills.css
@@ -54,6 +54,8 @@
 @media (max-width: 1090px) {
   .title {
     max-width: 300px;
+    /* margin-left: auto;
+    margin-right: auto; */
   }
 
   .ability {
